Fix a white space on the right side

--- a/style/style.css
+++ b/style/style.css
@@ -47,17 +47,11 @@ a{
     position: relative;
     float: left;
     min-height: 1rem;
-    box-sizing: border-box;
-}
-
-i {
-    cursor: pointer;
-    cursor: hand;
 }
 
 /* Navigation Section */
 nav{
-    padding: 1rem;
+    padding: 1rem 0;
     box-shadow: 0 0.2rem 0.5rem 0 rgba(0,0,0, .3);
     z-index: 1;
 }
@@ -77,39 +71,46 @@ ul.topnav li a {
     border-radius: 0.3rem;
 }
 
+ul.topnav img {
+    margin-left: 1.5rem;
+}
+
 ul.topnav li [name="q"] {
     display: block;
     height: 5rem;
-    margin-left: 1.5rem;
+    margin: 0 1.5rem;
     padding-left: 1.5rem;
     border-radius: 0.3rem;
     border: 0;
-    box-sizing: border-box;
 }
 
 /* Header Section */
 
 .header{
-    padding: 5% 10%;
+    padding: 5% 0;
 }
 
 .top-header{
     line-height: 1.4em;
     font-family: 'Audiowide', serif;
+    margin-left: 5%;
 }
 
 .top-subheader{
     line-height: 1.4em;
+    margin-left: 5%;
 }
 
 .header-list{
     line-height: 2rem;
     margin-top: 2em;
+    margin-left: 5%;
     padding-left: 1.5rem;
 }
 
 .header-btns{
     margin-top: 5rem;
+    margin-left: 5%;
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -166,7 +167,6 @@ ul.topnav li [name="q"] {
 /* table into div */
 .rTable {
     display: block;
-    padding-left: 1.5%;
     width: 100%;
 }
 .rTableHeading, .rTableBody, .rTableFoot, .rTableRow{
@@ -210,9 +210,8 @@ ul.topnav li [name="q"] {
     position: absolute;
     top: 5rem;
     display: block;
-    width: 800px;
+    width: 922px;
     height: 450px;
-    border-radius: 1.5rem;
     box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0, .3);
 }
 
@@ -231,7 +230,7 @@ ul.topnav li [name="q"] {
 
 .img-wrapper{
     position: relative;
-    width: 785px;
+    width: 922px;
     height: 450px;
     padding: 3rem 2rem;
     margin: auto;
@@ -268,18 +267,19 @@ ul.topnav li [name="q"] {
 /* Footer Section */
 
 .footer{
-    padding: 2% 5%;
+    padding: 2% 0;
     display: inline-block;
     font-size: 1.2rem;
 }
 
 .footer-logo{
+    float: right;
+    margin-right: 1rem;
     vertical-align: middle;
     overflow-wrap: break-word;
 }
 
 .footer-copyright{
-    padding-left: 1.5rem;
     line-height: 1.8em;
     vertical-align: middle;
     overflow-wrap: break-word;
@@ -296,7 +296,7 @@ ul.topnav li [name="q"] {
 
 .footer-sociallinks li{
     display: inline-block;
-    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 .footer-sociallinks a{
